CSCEXAM-000 Release 5.1.3 work